--- a/themes/tranquilpeak/languages/en.yml
+++ b/themes/tranquilpeak/languages/en.yml
@@ -57,6 +57,6 @@ post:
 
 author:
     # Your biography (Markdown and HTML supported)
-    bio: ""
+    bio: "I am a software engineer hungry for new challenges when working in a project, I love projects that allow me to learn a new language or methodology, specially when it is a challenging project. I do not hesitate to dive into the task, and apply the new knowledge gathered from learning the languages, technologies and methodologies to ensure the highest success of the project."
     # Your job
-    job: ""
+    job: "DevOps for Micromax Studio S.L."
